feat : better version chatbot